--- a/front/ycyw-chat-poc/src/index.html
+++ b/front/ycyw-chat-poc/src/index.html
@@ -9,6 +9,7 @@
   <script>
     window.global = window;
   </script>
+  <script src="https://kit.fontawesome.com/27f4c012b5.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1.5.0/dist/sockjs.min.js"></script>
 </head>
 <body>
